--- a/nosotros.html
+++ b/nosotros.html
@@ -36,9 +36,7 @@
                 </p>
                 <p>
                     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
-                    Nullam lectus lorem, venenatis a arcu fermentum, placerat pharetra felis. Lorem ipsum dolor sit amet, 
-                    consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean sodales 
-                    lorem ante, sed tincidunt massa ultricies in.
+                    Nullam lectus lorem, venenatis a arcu fermentum, placerat pharetra felis. 
                 </p>
 
             </div>
